projeto_linguagem_1_bimestre/PythonParser.py
# Generated from PythonParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "PythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'print'", "'input'", "'if'", "'else'", 
                     "'while'", "'for'", "'in'", "'range'", "'do'", "'break'", 
                     "'continue'", "'True'", "'False'", "'def'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'and'", "'or'", 
                     "'not'", "'&'", "'|'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "':'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "PRINT", "INPUT", "IF", "ELSE", "WHILE", 
                      "FOR", "IN", "RANGE", "DO", "BREAK", "CONTINUE", "TRUE", 
                      "FALSE", "DEF", "ASSIGN", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "POW", "EQ", "NEQ", "LT", "GT", "LTE", 
                      "GTE", "AND", "OR", "NOT", "BITAND", "BITOR", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
                      "COLON", "SEMICOLON", "COMMA", "IDENTIFIER", "NUMBER", 
                      "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignmentStatement = 2
    RULE_printStatement = 3
    RULE_inputStatement = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_forStatement = 7
    RULE_doWhileStatement = 8
    RULE_breakStatement = 9
    RULE_continueStatement = 10
    RULE_defStatement = 11
    RULE_expressionStatement = 12
    RULE_block = 13
    RULE_expression = 14
    RULE_add_sub = 15
    RULE_mul_div = 16
    RULE_pow_op = 17
    RULE_comparison_op = 18
    RULE_logical_op = 19
    RULE_bitwise_and_or = 20

    ruleNames =  [ "program", "statement", "assignmentStatement", "printStatement", 
                   "inputStatement", "ifStatement", "whileStatement", "forStatement", 
                   "doWhileStatement", "breakStatement", "continueStatement", 
                   "defStatement", "expressionStatement", "block", "expression", 
                   "add_sub", "mul_div", "pow_op", "comparison_op", "logical_op", 
                   "bitwise_and_or" ]

    EOF = Token.EOF
    PRINT=1
    INPUT=2
    IF=3
    ELSE=4
    WHILE=5
    FOR=6
    IN=7
    RANGE=8
    DO=9
    BREAK=10
    CONTINUE=11
    TRUE=12
    FALSE=13
    DEF=14
    ASSIGN=15
    PLUS=16
    MINUS=17
    MULT=18
    DIV=19
    MOD=20
    POW=21
    EQ=22
    NEQ=23
    LT=24
    GT=25
    LTE=26
    GTE=27
    AND=28
    OR=29
    NOT=30
    BITAND=31
    BITOR=32
    LPAREN=33
    RPAREN=34
    LBRACE=35
    RBRACE=36
    LBRACKET=37
    RBRACKET=38
    COLON=39
    SEMICOLON=40
    COMMA=41
    IDENTIFIER=42
    NUMBER=43
    STRING=44
    WS=45
    COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 30932354498154) != 0):
                self.state = 42
                self.statement()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(PythonParser.AssignmentStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(PythonParser.PrintStatementContext,0)


        def inputStatement(self):
            return self.getTypedRuleContext(PythonParser.InputStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(PythonParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(PythonParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(PythonParser.ForStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(PythonParser.ExpressionStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(PythonParser.DoWhileStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(PythonParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(PythonParser.ContinueStatementContext,0)


        def defStatement(self):
            return self.getTypedRuleContext(PythonParser.DefStatementContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.assignmentStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.printStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.inputStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.ifStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.whileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 55
                self.forStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 56
                self.expressionStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 57
                self.doWhileStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 58
                self.breakStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 59
                self.continueStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 60
                self.defStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PythonParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExpressionContext,i)


        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.LBRACKET)
            else:
                return self.getToken(PythonParser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.RBRACKET)
            else:
                return self.getToken(PythonParser.RBRACKET, i)

        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = PythonParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignmentStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(PythonParser.IDENTIFIER)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 64
                self.match(PythonParser.LBRACKET)
                self.state = 65
                self.expression(0)
                self.state = 66
                self.match(PythonParser.RBRACKET)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(PythonParser.ASSIGN)
            self.state = 74
            self.expression(0)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 75
                self.match(PythonParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PythonParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = PythonParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(PythonParser.PRINT)
            self.state = 79
            self.match(PythonParser.LPAREN)
            self.state = 80
            self.expression(0)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 81
                self.match(PythonParser.COMMA)
                self.state = 82
                self.expression(0)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(PythonParser.RPAREN)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 89
                self.match(PythonParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PythonParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)

        def INPUT(self):
            return self.getToken(PythonParser.INPUT, 0)

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def STRING(self):
            return self.getToken(PythonParser.STRING, 0)

        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_inputStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStatement" ):
                listener.enterInputStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStatement" ):
                listener.exitInputStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputStatement" ):
                return visitor.visitInputStatement(self)
            else:
                return visitor.visitChildren(self)




    def inputStatement(self):

        localctx = PythonParser.InputStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_inputStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(PythonParser.IDENTIFIER)
            self.state = 93
            self.match(PythonParser.ASSIGN)
            self.state = 94
            self.match(PythonParser.INPUT)
            self.state = 95
            self.match(PythonParser.LPAREN)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==44:
                self.state = 96
                self.match(PythonParser.STRING)


            self.state = 99
            self.match(PythonParser.RPAREN)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 100
                self.match(PythonParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonParser.ExpressionContext,0)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COLON)
            else:
                return self.getToken(PythonParser.COLON, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.BlockContext)
            else:
                return self.getTypedRuleContext(PythonParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(PythonParser.ELSE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = PythonParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(PythonParser.IF)
            self.state = 104
            self.expression(0)
            self.state = 105
            self.match(PythonParser.COLON)
            self.state = 106
            self.block()
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 107
                self.match(PythonParser.ELSE)
                self.state = 108
                self.match(PythonParser.COLON)
                self.state = 109
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PythonParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonParser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(PythonParser.BlockContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = PythonParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(PythonParser.WHILE)
            self.state = 113
            self.expression(0)
            self.state = 114
            self.match(PythonParser.COLON)
            self.state = 115
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PythonParser.FOR, 0)

        def IDENTIFIER(self):
            return self.getToken(PythonParser.IDENTIFIER, 0)

        def IN(self):
            return self.getToken(PythonParser.IN, 0)

        def RANGE(self):
            return self.getToken(PythonParser.RANGE, 0)

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(PythonParser.BlockContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def getRuleIndex(self):
            return PythonParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = PythonParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(PythonParser.FOR)
            self.state = 118
            self.match(PythonParser.IDENTIFIER)
            self.state = 119
            self.match(PythonParser.IN)
            self.state = 120
            self.match(PythonParser.RANGE)
            self.state = 121
            self.match(PythonParser.LPAREN)
            self.state = 122
            self.expression(0)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 123
                self.match(PythonParser.COMMA)
                self.state = 124
                self.expression(0)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==41:
                    self.state = 125
                    self.match(PythonParser.COMMA)
                    self.state = 126
                    self.expression(0)




            self.state = 131
            self.match(PythonParser.RPAREN)
            self.state = 132
            self.match(PythonParser.COLON)
            self.state = 133
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(PythonParser.DO, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(PythonParser.BlockContext,0)


        def WHILE(self):
            return self.getToken(PythonParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_doWhileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStatement" ):
                listener.enterDoWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStatement" ):
                listener.exitDoWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStatement" ):
                return visitor.visitDoWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def doWhileStatement(self):

        localctx = PythonParser.DoWhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_doWhileStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(PythonParser.DO)
            self.state = 136
            self.match(PythonParser.COLON)
            self.state = 137
            self.block()
            self.state = 138
            self.match(PythonParser.WHILE)
            self.state = 139
            self.expression(0)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 140
                self.match(PythonParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(PythonParser.BREAK, 0)

        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_breakStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStatement" ):
                listener.enterBreakStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStatement" ):
                listener.exitBreakStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStatement" ):
                return visitor.visitBreakStatement(self)
            else:
                return visitor.visitChildren(self)




    def breakStatement(self):

        localctx = PythonParser.BreakStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_breakStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(PythonParser.BREAK)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 144
                self.match(PythonParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinueStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(PythonParser.CONTINUE, 0)

        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_continueStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinueStatement" ):
                listener.enterContinueStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinueStatement" ):
                listener.exitContinueStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinueStatement" ):
                return visitor.visitContinueStatement(self)
            else:
                return visitor.visitChildren(self)




    def continueStatement(self):

        localctx = PythonParser.ContinueStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_continueStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(PythonParser.CONTINUE)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 148
                self.match(PythonParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(PythonParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def LBRACE(self):
            return self.getToken(PythonParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PythonParser.RBRACE, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExpressionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_defStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefStatement" ):
                listener.enterDefStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefStatement" ):
                listener.exitDefStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefStatement" ):
                return visitor.visitDefStatement(self)
            else:
                return visitor.visitChildren(self)




    def defStatement(self):
